--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,7 +98,7 @@
 
     <div class="tp-banner head-overlay">
       <ul>	<!-- SLIDE  -->
-        <li data-transition="boxfade" data-slotamount="1" data-masterspeed="1000" data-thumb="/assets/custom/images/rs-images/fullslide1-320x200.jpg"  data-saveperformance="off"  data-title="Slide">
+        <li data-transition="boxfade" data-slotamount="1" data-masterspeed="1000"  data-saveperformance="off"  data-title="Slide">
           <!-- MAIN IMAGE --><!-- /assets/custom/images/rs-images/02new.jpg -->
           <img src="/images/WorkLondon.jpg"  alt="fullslide1"  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
           <!-- LAYERS -->
@@ -116,7 +116,7 @@
                data-endelementdelay="0.1"
                data-endspeed="500"
                data-endeasing="Power4.easeIn"
-               style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;"><img src="/images/Page-icon.png" alt="x">
+               style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;"><i class="fa fa-cogs fa-5x"></i>
           </div>
 
           <!-- LAYER NR. 1 -->
@@ -170,7 +170,7 @@
 
         </li>
         <!-- SLIDE  -->
-        <li data-transition="boxfade" data-slotamount="1" data-masterspeed="1000" data-thumb="/assets/custom/images/rs-images/fullslide8-320x200.jpg"  data-saveperformance="off"  data-title="Slide">
+        <li data-transition="boxfade" data-slotamount="1" data-masterspeed="1000"  data-saveperformance="off"  data-title="Slide">
           <!-- MAIN IMAGE -->
           <img src="/images/sky-8.png"  alt="fullslide8"  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
           <!-- LAYERS -->
@@ -188,7 +188,7 @@
                data-endelementdelay="0.1"
                data-endspeed="500"
                data-endeasing="Power4.easeIn"
-               style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;"><img src="/images/Page-icon.png" alt="x">
+               style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;"><i class="fa fa-cogs fa-5x"></i>
           </div>
 
           <!-- LAYER NR. 1 -->
@@ -347,7 +347,7 @@
           </p>
           <ul>
             <li>Pairing</li>
-            <li>Test driven development</li>
+            <li>Test/Behaviour Driven Development</li>
             <li>Proper use of SOLID principles</li>
             <li>Continuous refectoring</li>
             <li>Code integration and deployment through CI and CD</li>
@@ -361,6 +361,7 @@
             20 years of coding.<br>Most days
           </p>
           <ul>
+              <li>.NEt/C#/F#/C++</li>
             <li>Html/Javascript/CSS</li>
             <li>Angular and BootStrap</li>
             <li>MVC and Web API</li>
@@ -379,6 +380,7 @@
             <li>Code reviewing</li>
             <li>Demo'ing</li>
             <li>User management</li>
+              <li>Team leading</li>
           </ul>
         </div>
       </div>
@@ -407,7 +409,7 @@
       Here is just a snapshot of what I've been working on the past few years.  <br/>
         I'm a full stack SPA engineer using bootstrap to speed up CSS development.</br>
         For many years I have used .Net (Mvc / Web API) & ORM's for the middle and back <br/>
-        but more recently I have been veering off in the world of the M.E.A.N stack.
+        but more recently I have been veering off into the world of the M.E.A.N stack.
     </p>
     <div class="dividewhite2"></div>
 
@@ -566,7 +568,7 @@
                 Building responsive cross platform rich front ends has never been easier.  Creating well structured JS has been a problem for
                 years but the last 5years has seen small revolution with really good SPA frameworks coming of age.  When you add Bootstrap themes
                 over the top you can get great looking for minimum effort.  I've been doing MVC development for a while now and JS for even longer,
-                  so doing them together in the browser with HTML5 is a really plesurable way to work.
+                  so doing them together in the browser with HTML5 is a really pleasurable way to work.
               </p>
             </div>
           </div>
@@ -578,9 +580,9 @@
               <h4 class="font-regular-normal">Web API & NodeJS</h4>
               <div class="dividewhite1"></div>
               <p>
-                Forget SOAP, JSON is king now.  I started out the OpenRaster a while ago and it did have it's pain point,
-                  Web API removed all that.  I a big fan of loose coupling and I'm always pleasantly surprised when an
-                  API I created for a rich front end is reused else were. I'm new to Node but it all feels so familiar
+                Forget SOAP, JSON is king now.  I started out on OpenRaster a while ago and it did have it's pain point but
+                  Web API removed all those.  I'm big fan of loose coupling and I'm always pleasantly surprised when an
+                  API I created for a rich front end is reused elsewhere. I'm new to Node but it all feels so familiar
                   and I'm hoping to get my first Node addon done soon, maybe for <a href="\nodetracker">Node Tracker</a>
               </p>
             </div>
@@ -594,7 +596,7 @@
               <div class="dividewhite1"></div>
               <p>
                 I hate magic SQL strings, I was made to do it is an ASP classic project.  The first ORM I used was SubSonic
-                  but I quickly moved onto nHibernate and to be truthful it still my favorite because, in my humble opinion,
+                  but I quickly moved onto nHibernate and to be truthful it's still my favorite because, in my humble opinion,
                   I feel I can do more with it, turning, sequencing, etc.  My first experience with No SQL was the SterlingDB
                   for Silverlight and loved it.  I'm just starting my journey on the MEAN stack but because of my love of maps
                   it wont be long before I hit Neo4j.
@@ -612,8 +614,8 @@
               <h4 class="font-regular-normal">TDD & BDD</h4>
               <div class="dividewhite1"></div>
               <p>
-                One thing hate more than magic SQL strings is bugs. For the love of me I can not understand why more
-                  engineering departments are TDD based, it much more cost effective and just a nicer way to work.  Then
+                One thing I hate more than magic SQL strings is bugs. For the love of me I can not understand why more
+                  engineering departments are not TDD based, it much more cost effective and just a nicer way to work.  Then
                   came BDD, wow.  Now I can have a requirement I compile and run against my code. Finally we have a definative
                   definition of done.  If my BDD feature passes and I'm committed (and the CI/CD passes) I'm done.
               </p>
@@ -629,7 +631,7 @@
               <p>
                 This sounds a bit washy but when done right it really works.  Good practices make better code but things
                   like SOLID, KISS, YAGNI and DRY arn't applied as much as they should be, Marry Liskov would not be pleased.
-                  Do this right though is hard, one doesn't always hit the mark but if you start from the fact we all write
+                  Doing this right though is hard, one doesn't always hit the mark but if you start from the fact we all write
                   bad code from time to time and it can be changed you should end up with something that stands the test of
                   time.
               </p>
@@ -646,7 +648,7 @@
                 No one is an Island.  I worked at home in a team of one for 2 years, never again.  If you walk into an
                   engineering department and you can hear a pin drop then something is wrong.  Engineers need to speak to
                   each other (and I don't mean messaging), that how we solve the impossible, together and normally laterally.
-                  We have our own 'Do Not Disturb' signs, normally headphones but if we're not communicating meanfully we
+                  We have our own 'Do Not Disturb' signs, normally headphones but if we're not communicating meaningfully we're
                   dead in the water.
               </p>
             </div>
@@ -677,8 +679,8 @@
         <div class="infoblock">
           <!-- About Widget -->
           <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
-          <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
-          databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
+          <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years from CGI bins to Javascript in
+          databases in the new world of server side JS.  There are loads of industries I worked in and I've been very lucky with the people I've worked with, every day is a school day.
             How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
 
           <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
