--- a/views/nodetracker.ejs
+++ b/views/nodetracker.ejs
@@ -99,11 +99,9 @@
        <div class="container">
           <div id="page-title">
 				 <div class="page-title-details">
-					 <h1 class="font-accident-one-light">GIS for Marine Mammals</h1>
+					 <h1 class="font-accident-one-light">Open Source and Free to All</h1>
 					 <ul>
-						 <li>Angular</li>
-                         <li>/</li>
-						 <li>TypeScript</li>
+						 <li>GIS for Marine Mammals</li>
 					 </ul>
 				 </div>
           </div>
@@ -191,10 +189,10 @@
 
         <div class="container isotope-container">
 
-          <h3 class="font-accident-one-bold uppercase">Related Products</h3>
-          <p>
-            The contribution winning the FACE award is selected by a jury from the entries in the <br>"Human Rights in Cinema" section of the festival. This includes both documentaries and feature <br>films investigating social change and individual dramas.
-          </p>
+            <h3 class="font-accident-one-bold uppercase">Related Projects</h3>
+            <p>
+                Here are a project that use similar technologies
+            </p>
           <div class="dividewhite3"></div>
 
           <div id="posts" class="row">
@@ -238,9 +236,9 @@
                     <div class="infoblock">
                         <!-- About Widget -->
                         <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
-                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
-                            databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
-                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
+                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years from CGI bins to Javascript in
+                            databases in the new world of server side JS.  There are loads of industries I worked in and I've been very lucky with the people I've worked with, every day is a school day.
+                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid</p>
 
                         <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
                             annoying really motorist with my caravan</p>
