--- a/views/siseditor.ejs
+++ b/views/siseditor.ejs
@@ -99,11 +99,9 @@
        <div class="container">
           <div id="page-title">
 				 <div class="page-title-details">
-					 <h1 class="font-accident-one-light">GLOBAL BETTING FEED PLATFORM</h1>
+					 <h1 class="font-accident-one-light">Ultra Low Latency</h1>
 					 <ul>
-						 <li>Angular</li>
-                         <li>/</li>
-						 <li>TypeScript</li>
+						 <li>Global Betting Feed Platform</li>
 					 </ul>
 				 </div>
           </div>
@@ -140,17 +138,17 @@
                             <hr>
                             <ul>
                                 <li>Project Category: <span>.Net | Bootstrap | KnockoutJS</span></li>
-                                <li>Client: <span>SatelliteInformation Systems</span></li>
+                                <li>Client: <span>Satellite Information Systems</span></li>
                                 <li>Start Date: <span>January 2011</span></li>
-                                <li>End Date: <span>MAy 2013</span></li>
+                                <li>End Date: <span>May 2013</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Racecard management</li>
-                                <li>Day of racing management including tisue pricing</li>
+                                <li>Race card management</li>
+                                <li>Day of racing management including tissue pricing</li>
                                 <li>Starting price management</li>
                                 <li>Resulting and dividend calculation</li>
                                 <li>Feed trigger management</li>
@@ -171,22 +169,22 @@
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
               <p>
-                SIS are the leading provider of betting data and TV to high street bookmakers.  In fact the big 5 own
-                  large stakes in SIS Holdings.  If fact if you've ever been into the bookies for a little flutter then
+                SIS are the leading provider of betting data and TV to high street bookmakers.  In fact the big 5 own a
+                  large stake in SIS Holdings.  If you've ever been into the bookies for a little flutter then
                   you wil have seen both SIS data and images.  SIS collected data track side which is sent back to a
-                  central data suite.  Once the data is verified it sent on to the wider world.  Some take this as is,
-                  others, mainly the big 5 use the feed as a sort of base rate so do their own alterations before send
+                  central data suite.  Once the data is verified it sent on to the wider world.  Some take this data as is while
+                  others, mainly the big 5, use the feed as a sort of base rate so do their own alterations before send
                   this on.
               </p>
                 <h3 class="font-accident-one-medium uppercase">Pride</h3>
                 <p>
-                    This is without doubt the hardest domain I've worked in.  The project had been can twice before and
-                    had been runner for 5 years.  The current team were in a state and with the relocation leaving at a
+                    This is without doubt the hardest domain I've worked in.  The project had been canned twice before and
+                    had been runner for 5 years.  The current team were in a state and, with the office relocation, leaving at a
                     rate of knots.  The contractors in place were not fit for purpose and so were replace outstanding
                     engineers, Chris Herselman and Nap Catilio.  We spent the next 2 year battling, refactoring,
                     rethinking, coding, drinking beer and achieving something one else had.  This wasn't the finest code base
-                    I've produced but it was best project.  The real cherry on the cake was the team we handed to were
-                    second to none.
+                    I've produced but it was best project in what we achieved.  The real cherry on the cake was the team
+                    we handed the project to were second to none.
                 </p>
                 <h3 class="font-accident-one-medium uppercase">Technologies</h3>
                 <div class="container">
@@ -223,10 +221,10 @@
 
         <div class="container isotope-container">
 
-          <h3 class="font-accident-one-bold uppercase">Related Products</h3>
-          <p>
-            The contribution winning the FACE award is selected by a jury from the entries in the <br>"Human Rights in Cinema" section of the festival. This includes both documentaries and feature <br>films investigating social change and individual dramas.
-          </p>
+            <h3 class="font-accident-one-bold uppercase">Related Projects</h3>
+            <p>
+                Here are some projects that use similar technologies
+            </p>
           <div class="dividewhite3"></div>
 
             <div id="posts" class="row">
@@ -308,8 +306,8 @@
                     <div class="infoblock">
                         <!-- About Widget -->
                         <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
-                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
-                            databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
+                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years from CGI bins to Javascript in
+                            databases in the new world of server side JS.  There are loads of industries I worked in and I've been very lucky with the people I've worked with, every day is a school day.
                             How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
 
                         <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
