--- a/views/stratmed.ejs
+++ b/views/stratmed.ejs
@@ -99,11 +99,9 @@
        <div class="container">
           <div id="page-title">
 				 <div class="page-title-details">
-					 <h1 class="font-accident-one-light">Gene Matching Platform</h1>
+					 <h1 class="font-accident-one-light">Stratified Medicine</h1>
 					 <ul>
-						 <li>Angular</li>
-                         <li>/</li>
-						 <li>TypeScript</li>
+						 <li>Gene Matching Platform</li>
 					 </ul>
 				 </div>
           </div>
@@ -129,7 +127,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="/images/double-helex-big.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/dnasequence.jpg" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -151,7 +149,7 @@
                             <ul class="list-o">
                                 <li>Creation and management of treatment centres</li>
                                 <li>Import of anonymized patient data</li>
-                                <li>Match of tumor DNA to targetted treatment</li>
+                                <li>Matching of tumor DNA to targeted treatment</li>
                                 <li>Outcome auditing and reporting</li>
                                 <li>User management for external users</li>
                                 <li>IE6 no JS implementation for the NHS</li>
@@ -183,8 +181,8 @@
                 </p>
                 <h3 class="font-accident-one-medium uppercase">Process</h3>
                 <p>
-                    While the StratMed team had decided to go down the agile methodology road there were a couple of stumbling
-                    blocks.  The first that was sorted was the absence of a estimation feedback loop in the sprint retrospectives.
+                    While the StratMed team had decided to go down the agile road there were a couple of stumbling
+                    blocks.  The first one to sort out was the absence of a estimation feedback loop in the sprint retrospectives.
                     This had meant no sprints were atomic and users were not getting stuff when we said, this was easily solved.
                 </p>
                 <p>
@@ -197,7 +195,7 @@
                 <h3 class="font-accident-one-medium uppercase">Implementation</h3>
                   <p>
                       I know, IE6 with no JS.  This wasn't as bad as it sounds as it was just flat HTML round tripping that was
-                      served by MVC 5 controllers.  As the IE6 version was for use by the NHS only a subset of functionality was
+                      served by MVC 5 controllers.  As the IE6 version was for use by the NHS, only a subset of functionality was
                       needed there.  I joined the project about 25% into the IE6 implementation which we quickly finished off
                       and moved onto the main bulk of a the implementation.
                   </p>
@@ -336,9 +334,9 @@
                     <div class="infoblock">
                         <!-- About Widget -->
                         <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
-                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
-                            databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
-                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
+                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years from CGI bins to Javascript in
+                            databases in the new world of server side JS.  There are loads of industries I worked in and I've been very lucky with the people I've worked with, every day is a school day.
+                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid</p>
 
                         <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
                             annoying really motorist with my caravan</p>
