--- a/views/website.ejs
+++ b/views/website.ejs
@@ -99,11 +99,9 @@
        <div class="container">
           <div id="page-title">
 				 <div class="page-title-details">
-					 <h1 class="font-accident-one-light">Experiments in the NodeJS Ecosystem</h1>
+					 <h1 class="font-accident-one-light">The Brave New World</h1>
 					 <ul>
-						 <li>Angular</li>
-                         <li>/</li>
-						 <li>TypeScript</li>
+						 <li>Experiments in the NodeJS Ecosystem</li>
 					 </ul>
 				 </div>
           </div>
@@ -173,21 +171,19 @@
               <p>
                 I've been doing .Net for years now and it's time for a change.  I've also been doing JavaScript for
                   almost 20 years too and it's a really exciting time for JS so it's time to join the party.  I'm start
-                  an <a href="/nodetracker">open source project</a> but here I can play.  So over the coming months I
-                  will slowly make the site more dynamic. It's also hosted on Heroku too which is also something new for me.
+                  an <a href="/nodetracker">open source project</a> but here I can play.
               </p>
+                <h3 class="font-accident-one-medium uppercase">Technologies</h3>
+                <p>
+                    So over the coming months I will slowly make the site content more dynamic. I'm really using this project as
+                    a way to learn ExpressJS and EJS without worrying about anything else. It's also hosted on Heroku
+                    which is also something new for me, Git deployments are lovely.
+                </p>
                 <p>
                     This site is open source too, you can find the code <a href="https://github.com/jolySoft/webenabled.tv">here</a>
                 </p>
             </div>
           </div>
-
-
-
-
-
-
-
         </div>
       </div>
 
@@ -195,11 +191,12 @@
 
         <div class="container isotope-container">
 
-          <h3 class="font-accident-one-bold uppercase">Related Products</h3>
-          <p>
-            The contribution winning the FACE award is selected by a jury from the entries in the <br>"Human Rights in Cinema" section of the festival. This includes both documentaries and feature <br>films investigating social change and individual dramas.
-          </p>
-          <div class="dividewhite3"></div>
+            <h3 class="font-accident-one-bold uppercase">Related Projects</h3>
+            <p>
+                Here are some projects that use similar technologies
+            </p>
+
+            <div class="dividewhite3"></div>
 
           <div id="posts" class="row">
               <div id="1" class="item marketing col-md-4 col-md-offset-4 nopadding">
@@ -241,9 +238,9 @@
                     <div class="infoblock">
                         <!-- About Widget -->
                         <h2 class="font-accident-one-bold">About</h2><a id="about"></a>
-                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years for CGI bins to Javascript in
-                            databases in the new world of server side JS.  There are loads of industries I worked in now and I've been very lucky in the people I've worked with, every day is a school day.
-                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid.</p>
+                        <p>Hello, I'm a software engineer of 20 years.  I built my first dynamic website in 1995 and just love internet technologies.  I've seen a few changes over the years from CGI bins to Javascript in
+                            databases in the new world of server side JS.  There are loads of industries I worked in and I've been very lucky with the people I've worked with, every day is a school day.
+                            How we as humans make software fascinates me, stopping the entropy and keeping it simple stupid</p>
 
                         <p>London has been home for more than 15 years but I' a country bumpkin really.  If I'm not out with my dogs or shooting arrows then I'm probably under my Land Rover or
                             annoying really motorist with my caravan</p>
