--- a/views/arc.ejs
+++ b/views/arc.ejs
@@ -127,7 +127,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="/images/arc.png" class="img-responsive" alt="img11"/>
+                  <img src="/images/Arc.png" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
